project/k8s_vuln_lab/40-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-nodeport
  namespace: lab-vuln
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-nodeport
  template:
    metadata:
      labels:
        app: web-nodeport
    spec:
      containers:
        - name: web
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
  namespace: lab-vuln
spec:
  type: NodePort
  selector:
    app: web-nodeport
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
